[package]
name = "maelstrom_client"
version = "0.1.0"
edition = "2021"

members = [
    "broadcast",
    "grow_counter"
]

[[bin]]
name= "broadcast"
test = false
bench = false
path="broadcast/src/main.rs"

[[bin]]
name= "grow_counter"
test = false
bench = false
path="grow_counter/src/main.rs"

[dependencies]
anyhow = "1.0.70"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.28.0", features = ["full"] }
